--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.0
 pytz==2017.2
+roman==2.0.0
 six==1.10.0
 smartypants==2.0.0
 typogrify==2.0.7
