--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,9 @@ jobs:
           if grep -q "YAML Exception" build.log; then
             grep "YAML Exception" build.log | while read -r line; do
               # Extract file path, line number, and column number from the error message
-              file_path=$(echo "$line" | sed -E 's/.*reading (.*?):.*/\1/')
+              # Extract the relative file path (ensure it's relative to the repo root)
+              file_path=$(echo "$line" | sed -E 's/.*reading \/home\/runner\/work\/[^\/]+\/[^\/]+\/(.*?):.*/\1/')
+              file_path=$(echo "$file_path" | sed 's|^/[^/]\+/[^/]\+/||')
               line_number=$(echo "$line" | sed -E 's/.*line ([0-9]+) .*/\1/')
               column_number=$(echo "$line" | sed -E 's/.*column ([0-9]+).*/\1/')
               
