--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,8 +57,7 @@ jobs:
               # Extract file path, line number, and column number from the error message
               # Extract the relative file path (ensure it's relative to the repo root)
               echo "$line"
-              file_path=$(echo "$line" | sed -E 's/.*reading \/home\/runner\/work\/[^\/]+\/[^\/]+\/(.*?):.*/\1/')
-              file_path=$(echo "$file_path" | sed 's|^/[^/]\+/[^/]\+/||')
+              file_path=$(echo "$line" | sed -E 's/.*reading \/home\/runner\/work\/[^\/]+\/[^\/]+\/([^:]+):.*/\1/')
               line_number=$(echo "$line" | sed -E 's/.*line ([0-9]+) .*/\1/')
               column_number=$(echo "$line" | sed -E 's/.*column ([0-9]+).*/\1/')
               echo "$file_path"
