--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,23 @@ jobs:
           bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" 2>&1 | tee build.log
         env:
           JEKYLL_ENV: production
+      - name: Upload Build Log
+        uses: actions/upload-artifact@v4
+        with:
+          name: build.log
+          path: build.log
+          retention-days: 1
+      - name: Upload Site
+        # Automatically uploads an artifact from the './_site' directory by default
+        uses: actions/upload-pages-artifact@v3
+  check:
+    name: Check Front Matter
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Build Log
+        uses: actions/download-artifact@v4
+        with:
+          name: build.log
       - name: Check for YAML front matter issues
         shell: bash
         run: |
@@ -59,23 +76,18 @@ jobs:
               line_number=$(echo "$line" | sed -E 's/.*line ([0-9]+) .*/\1/')
               column_number=$(echo "$line" | sed -E 's/.*column ([0-9]+).*/\1/')
 
-              title="YAML issue detected"
               # Output warning tied to the specific file and line number
-              echo "::error file=$file_path,line=$line_number,column=$column_number,title=$title::YAML issue detected at line $line_number, column $column_number in file $file_path"
+              echo "::error file=$file_path,line=$line_number,column=$column_number::YAML issue detected at line $line_number, column $column_number in file $file_path"
             done
             exit 1
           fi
-      - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
-        uses: actions/upload-pages-artifact@v3
-
   # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
+    needs: check
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
