--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ concurrency:
 jobs:
   # Build job
   build:
+    name: Build Site
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -78,12 +79,13 @@ jobs:
               column_number=$(echo "$line" | sed -E 's/.*column ([0-9]+).*/\1/')
 
               # Output warning tied to the specific file and line number
-              echo "::error file=$file_path,line=$line_number,column=$column_number::YAML issue detected at line $line_number, column $column_number in file $file_path"
+              echo "::error title=YAML Error!,file=$file_path,line=$line_number,column=$column_number::YAML issue detected at line $line_number, column $column_number in file $file_path"
             done
             exit 1
           fi
   # Deployment job
   deploy:
+    name: Deploy Site
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
