--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,14 @@ name: Deploy Jekyll site to Pages
 
 on:
   push:
-    branches: ["gh-pages-test"]
+    branches:
+      - "gh-pages-test"
+    paths:
+      - "**/*"
+  workflow_run:
+    workflows: ["Resize Images"]
+    types:
+      - completed
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
