--- a/.github/workflows/resize_images.yml
+++ b/.github/workflows/resize_images.yml
@@ -2,7 +2,8 @@ name: Resize and Convert Images
 
 on:
   push:
-    branches: ["gh-pages-test"]
+    branches: 
+      - "gh-pages-test"
     paths:
       - "assets/img/original/*"  # Trigger when any image is added or modified
       - ".github/workflows/resize_images.yml"
