--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,12 @@ on:
   push:
     branches:
       - "gh-pages-test"
+    paths:
+      - "!assets/img/original/*" # Don't run if only the original images match
+  workflow_run:
+    workflows: [Resize and Convert Images]
+    types:
+      - completed
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
