--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,14 @@ on:
   push:
     branches:
       - "gh-pages-test"
-    paths:
-      - "!assets/img/original/*" # Don't run if only the original images match
+    paths-ignore:
+      - "assets/img/original/*" # Don't run if only the original images match
   workflow_run:
     workflows: [Resize and Convert Images]
     types:
       - completed
+    branches:
+      - "gh-pages-test"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
