--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,11 +9,8 @@ updates:
       ruby-dependencies:
         patterns:
           - "*"
-        applies-to: security-updates
+        applies-to: "security-updates"
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "chore"
       include: "scope"
-    rebase-strategy: "auto"
-    reviewers:
-      - "ericw9079"
-    versioning-strategy: increase
+    versioning-strategy: "increase"
